fixing scrollbar

--- a/src/components/Skills/styles.module.scss
+++ b/src/components/Skills/styles.module.scss
@@ -3,7 +3,7 @@
 .skills {
     max-width: 100%;
     padding: 1rem;
-    overflow-x: scroll;
+    overflow-x: auto;
 
 	border-radius: 5px;
 	background-color: lighten(rgba(0, 0, 0, 0.7), 8);
@@ -22,5 +22,14 @@
         &:hover {
             box-shadow: 0px 0px 10px $pinhoColorSecondary;
         }
+    }
+
+    &::-webkit-scrollbar {
+        height: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: transparent;
+        box-shadow: none;
     }
 }
